--- a/wawspeedaudio/style.css
+++ b/wawspeedaudio/style.css
@@ -1,7 +1,18 @@
-.twoTimesButton{
-    color: gray;
+.changeSpeedButton{
+    color: #919191;
     font-size: 1rem;
     font-weight: bold;
     background-color: transparent;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border: none;
+}
+
+.currentSpeedButton{
+    color: #919191;
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: transparent;
+    width: 2.5rem;
     border: none;
 }
